# bevy_material_tool

./: Cargo.toml  Readme.md
src/: gltf_models.rs  lib.rs  material_name_map.rs  material_overrides.rs  material_replacements.rs  materials_config.rs
src/advanced_materials/: foliage_material.rs  mod.rs
src/advanced_materials/shaders/: foliage.wgsl  foliage2.wgsl
