[package]
name = "bevy_material_tool"
description = "A material replacement workflow for bevy"
version = "0.14.3" 
edition = "2021"
authors = [ "ethereumdegen" ]
license = "MIT"
 
keywords = ["bevy", "editor"]
categories = ["game-development", "gui", "visualization"]
exclude = ["assets"]

 
 



[dependencies]
 
bevy = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
 ron = "0.8.1"